--- a/deploy/Dockerfile-c
+++ b/deploy/Dockerfile-c
@@ -1,5 +1,5 @@
 FROM index.docker.io/library/golang:1.23.4-alpine3.21 AS golang
-FROM index.docker.io/library/alpine:3.21.2 AS alpine
+FROM index.docker.io/library/gcc:12.4.0 AS gcc
 
 FROM golang as build
 WORKDIR /workspace
@@ -8,7 +8,7 @@ RUN go mod download -x
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
-FROM alpine as run
+FROM gcc as run
 WORKDIR /workspace
 COPY --from=build /workspace/server .
 CMD ./server
