--- a/deploy/Dockerfile-c
+++ b/deploy/Dockerfile-c
@@ -10,6 +10,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
 FROM gcc as run
 WORKDIR /workspace
+COPY problem ./problem
 COPY --from=build /workspace/server .
 CMD ./server
 EXPOSE 1323
