--- a/deploy/Dockerfile-kotlin
+++ b/deploy/Dockerfile-kotlin
@@ -1,14 +1,14 @@
 FROM index.docker.io/library/golang:1.23.4-alpine3.21 AS golang
 FROM index.docker.io/library/eclipse-temurin:21.0.6_7-jdk-alpine-3.21 AS jdk
 
-FROM golang as build
+FROM golang AS build
 WORKDIR /workspace
 COPY go.mod go.sum ./
 RUN go mod download -x
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
-FROM jdk as run
+FROM jdk AS run
 RUN apk update && apk add bash && \
     cd /usr/lib && \
     wget -q https://github.com/JetBrains/kotlin/releases/download/v2.1.10/kotlin-compiler-2.1.10.zip && \
@@ -20,5 +20,6 @@ RUN apk update && apk add bash && \
 WORKDIR /workspace
 COPY problem ./problem
 COPY --from=build /workspace/server .
+COPY docs ./docs
 CMD ./server
 EXPOSE 1323
