--- a/deploy/Dockerfile-swift
+++ b/deploy/Dockerfile-swift
@@ -1,16 +1,17 @@
 FROM index.docker.io/library/golang:1.23.4-alpine3.21 AS golang
 FROM index.docker.io/library/swift:6.0.3 AS swift
 
-FROM golang as build
+FROM golang AS build
 WORKDIR /workspace
 COPY go.mod go.sum ./
 RUN go mod download -x
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
-FROM swift as run
+FROM swift AS run
 WORKDIR /workspace
 COPY problem ./problem
 COPY --from=build /workspace/server .
+COPY docs ./docs
 CMD ./server
 EXPOSE 1323
