--- a/deploy/Dockerfile-go
+++ b/deploy/Dockerfile-go
@@ -3,7 +3,8 @@ FROM index.docker.io/library/golang:1.23.4-alpine3.21 AS golang
 FROM golang AS build
 WORKDIR /workspace
 COPY go.mod go.sum ./
-RUN go mod download -x
+RUN go mod download -x && \
+    swag init
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
@@ -11,6 +12,6 @@ FROM golang AS run
 WORKDIR /workspace
 COPY problem ./problem
 COPY --from=build /workspace/server .
-COPY docs ./docs
+COPY --from=build /workspace/docs ./docs
 CMD ./server
 EXPOSE 1323
