--- a/deploy/Dockerfile-javascript
+++ b/deploy/Dockerfile-javascript
@@ -4,7 +4,8 @@ FROM index.docker.io/library/node:22.13.1-alpine3.21 AS node
 FROM golang AS build
 WORKDIR /workspace
 COPY go.mod go.sum ./
-RUN go mod download -x
+RUN go mod download -x && \
+    swag init
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
@@ -12,6 +13,6 @@ FROM node AS run
 WORKDIR /workspace
 COPY problem ./problem
 COPY --from=build /workspace/server .
-COPY docs ./docs
+COPY --from=build /workspace/docs ./docs
 CMD ./server
 EXPOSE 1323
