--- a/deploy/Dockerfile-kotlin
+++ b/deploy/Dockerfile-kotlin
@@ -5,6 +5,7 @@ FROM golang AS build
 WORKDIR /workspace
 COPY go.mod go.sum ./
 RUN go mod download -x && \
+    go install github.com/swaggo/swag/cmd/swag@latest && \
     swag init
 COPY . .
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
