--- a/deploy/Dockerfile-cpp
+++ b/deploy/Dockerfile-cpp
@@ -1,9 +1,9 @@
-FROM index.docker.io/library/golang:1.23.4-alpine3.21 AS golang
-FROM index.docker.io/library/gcc:12.4.0 AS gcc
+FROM docker.io/library/golang:1.23.4-alpine3.21 AS golang
+FROM docker.io/library/gcc:12.4.0 AS gcc
 
 FROM golang AS build
 WORKDIR /workspace
-COPY go.mod go.sum ./
+COPY main.go go.mod go.sum ./
 RUN go mod download -x && \
     go install github.com/swaggo/swag/cmd/swag@v1.16.4 && \
     swag init
