--- a/deploy/Dockerfile-swift
+++ b/deploy/Dockerfile-swift
@@ -1,9 +1,9 @@
-FROM index.docker.io/library/golang:1.23.4-alpine3.21 AS golang
-FROM index.docker.io/library/swift:6.0.3 AS swift
+FROM docker.io/library/golang:1.23.4-alpine3.21 AS golang
+FROM docker.io/library/swift:6.0.3 AS swift
 
 FROM golang AS build
 WORKDIR /workspace
-COPY go.mod go.sum ./
+COPY main.go go.mod go.sum ./
 RUN go mod download -x && \
     go install github.com/swaggo/swag/cmd/swag@v1.16.4 && \
     swag init
