--- a/deploy/Dockerfile-c
+++ b/deploy/Dockerfile-c
@@ -3,11 +3,11 @@ FROM docker.io/library/gcc:12.4.0 AS gcc
 
 FROM golang AS build
 WORKDIR /workspace
-COPY main.go go.mod go.sum ./
-RUN go mod download -x && \
-    go install github.com/swaggo/swag/cmd/swag@v1.16.4 && \
-    swag init
+COPY go.mod go.sum ./
+RUN go mod download -x
 COPY . .
+RUN go install github.com/swaggo/swag/cmd/swag@v1.16.4 && \
+    swag init
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
 FROM gcc AS run
