--- a/deploy/Dockerfile-python
+++ b/deploy/Dockerfile-python
@@ -3,11 +3,11 @@ FROM docker.io/library/python:3.13.2-alpine3.21 AS python
 
 FROM golang AS build
 WORKDIR /workspace
+RUN go install github.com/swaggo/swag/cmd/swag@v1.16.4
 COPY go.mod go.sum ./
 RUN go mod download -x
 COPY . .
-RUN go install github.com/swaggo/swag/cmd/swag@v1.16.4 && \
-    swag init
+RUN swag init
 RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
 FROM python AS run
