--- a/deploy/Dockerfile-go
+++ b/deploy/Dockerfile-go
@@ -11,6 +11,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
 FROM golang AS run
 WORKDIR /workspace
+COPY .env .
 COPY problem ./problem
 COPY --from=build /workspace/server .
 COPY --from=build /workspace/docs ./docs
