--- a/deploy/Dockerfile-java
+++ b/deploy/Dockerfile-java
@@ -12,6 +12,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
 FROM jdk AS run
 WORKDIR /workspace
+COPY .env .
 COPY problem ./problem
 COPY --from=build /workspace/server .
 COPY --from=build /workspace/docs ./docs
