--- a/deploy/Dockerfile-swift
+++ b/deploy/Dockerfile-swift
@@ -16,5 +16,5 @@ COPY .env .
 COPY .oci ~/.oci
 COPY --from=build /workspace/server .
 COPY --from=build /workspace/docs ./docs
-CMD ./server
+CMD sleep infinity
 EXPOSE 1323
