--- a/deploy/Dockerfile-c
+++ b/deploy/Dockerfile-c
@@ -13,7 +13,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 FROM gcc AS run
 WORKDIR /workspace
 COPY .env .
-COPY .oci ~/.oci
+COPY .oci /root/.oci
 COPY --from=build /workspace/server .
 COPY --from=build /workspace/docs ./docs
 CMD sleep infinity
