--- a/deploy/Dockerfile-go
+++ b/deploy/Dockerfile-go
@@ -12,7 +12,7 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 FROM golang AS run
 WORKDIR /workspace
 COPY .env .
-COPY .oci ~/.oci
+COPY .oci /root/.oci
 COPY --from=build /workspace/server .
 COPY --from=build /workspace/docs ./docs
 CMD sleep infinity
