--- a/deploy/Dockerfile-go
+++ b/deploy/Dockerfile-go
@@ -11,9 +11,9 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
 FROM golang AS run
 WORKDIR /workspace
-COPY .env .
 COPY .oci /root/.oci
+COPY .env .
 COPY --from=build /workspace/server .
 COPY --from=build /workspace/docs ./docs
-CMD sleep infinity
+CMD ./server
 EXPOSE 1323
