--- a/deploy/Dockerfile-java
+++ b/deploy/Dockerfile-java
@@ -12,9 +12,9 @@ RUN CGO_ENABLED=0 GOOS=linux GOARCH=arm64 go build -o server .
 
 FROM jdk AS run
 WORKDIR /workspace
-COPY .env .
 COPY .oci /root/.oci
+COPY .env .
 COPY --from=build /workspace/server .
 COPY --from=build /workspace/docs ./docs
-CMD sleep infinity
+CMD ./server
 EXPOSE 1323
